[build-system]
    requires = ["setuptools>=61.0"]
    build-backend = "setuptools.build_meta"


[project]
    name = "lia"
    description = "Small scripts to set up a logger on different platforms"
    readme = "README.md"
    license = { text = "MIT" }
    version = "0.1.0"
    requires-python = ">=3.8"
    authors = [
      {name = "LI", email = "joaquim@lowellinstruments.com"}
    ]
    keywords = ["lia"]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Natural Language :: English",
        "Operating System :: POSIX",
        "Operating System :: Microsoft :: Linux",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Communications",
        "Topic :: Software Development :: Libraries",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    dependencies = [
        "lsb@git+https://github.com/LowellInstruments/lsb.git",
        "simplepyble~=0.9.0",
        "setproctitle",
        "toml",
        "rich"
    ]

[project.urls]
"Homepage" = "https://www.lowellinstruments.com"

[tool.setuptools]
py-modules = []

[project.scripts]
# module.file:function
main_dox = "lia.main_dox:main"
main_tdo = "lia.main_tdo:main"

[tool.setuptools.packages.find]
where = ["."]